--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="wrapper">
+      <div class="container">
+        <p class=" letter letter-M">M</p>
+        <div class="moon">
+          <div class="orbit">
+            <p>O</p>
+          </div>
+        </div>
+        <p class="letter letter-N">N</p>
+
+      </div>
+      
+    </div>
+
   </body>
 </html>
